deployment.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monikatsu-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: monikatsu-server
  template:
    metadata:
      labels:
        app: monikatsu-server
    spec:
      containers:
        - name: monikatsu-server
          # Replace $GCLOUD_PROJECT with your project ID
          image: gcr.io/monikatsu-project/monikatsu-gke-test
          # This app listens on port 8080 for web traffic by default.
          ports:
            - containerPort: 8080
