deployment_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monikatsu-server
spec:
  ports:
    - port: 80
      targetPort: 9000
      protocol: TCP
      name: http
  selector:
    app: monikatsu-server
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monikatsu-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: monikatsu-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: monikatsu-server
    spec:
      containers:
        - name: esp
          image: gcr.io/endpoints-release/endpoints-runtime:1
          # todo: ここがよくわからん
          args: [
              "-P",
              "9000",
              "-a",
              "grpc://127.0.0.1:50051",
              "-s",
              "hellogrpc.endpoints.monikatsu-project.cloud.goog", # replace <YOUR_PROJECT_ID>
              "--rollout_strategy",
              "managed",
            ]
          ports:
            - containerPort: 9000
        - name: echo
          image: gcr.io/monikatsu-project/go-grpc-hello:1.0 # replace <YOUR_PROJECT_ID>
          ports:
            - containerPort: 50051
