service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monikatsu-service
spec:
  type: NodePort
  selector:
    app: monikatsu-pod
  ports:
    - port: 80
      targetPort: 8080
